feat: finalização do readme e alteração do backend para que a conexão com o banco de dados seja feita de maneira correta onde os dados sejam coletados

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -61,13 +61,13 @@ body {
     }
 }
 
-.taskCard{
+.task-card{
     display: flex;
     align-items: flex-start;
     flex-direction: column;
     padding: .5rem;
     gap: 5px;
-    background-color: #eeeeee;
+   
 
     box-shadow: 2px 2px 4px #c5c5c5;
 
